--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🐜 Calculadora de PC by:ঔৣ平Ƭнυяя和ヅ 159🐜</title>
+	
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -19,6 +20,17 @@
             border-radius: 8px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* Sombra mais escura para fundo escuro */
             border: 2px solid #FF0000; /* Borda vermelha para o container principal */
+			/* ... seus estilos existentes ... */
+/* NOVO: Estilo para o subtítulo "MELEE" */
+.subtitle-melee {
+    text-align: center; /* Centraliza o texto */
+    font-size: 1.2em; /* Deixa o texto um pouco maior */
+    font-weight: bold;
+    color: #FF0000; /* Cor vermelha para combinar com o título */
+    margin-top: -10px; /* Ajusta o espaçamento para ficar mais próximo do h1 */
+    margin-bottom: 20px;
+}
+/* ... seus estilos existentes ... */
         }
         h1 {
             color: #FF0000; /* vermei para o título principal */
@@ -147,6 +159,10 @@
 
 <div class="container">
     <h1>🐜Calculadora de PC by:ঔৣ平Ƭнυяя和ヅ 159🐜</h1>
+	<p class="subtitle-melee">MELEE</p> 
+	<div class="tier-select-container">
+	
+    
     
     <div class="tier-select-container">
         <label for="tierSelect">Selecione o Tipo de Formiga (Tier):</label>
@@ -660,4 +676,3 @@
 
 </body>
 </html>
-
