--- a/index.html
+++ b/index.html
@@ -477,9 +477,9 @@
 
 
         resultadoDiv.innerHTML = `
-            <p>⏳ **Tempo BASE Revertido (sem bônus):** ${tempoBaseDHMS}</p>
-            <p>Quantidade de Formigas: **${formatar(Q)}**</p>
-            <p style="color: blue;">*Tempo Base de ${tier} transferido automaticamente para a Seção 1.*</p>
+            <p>⏳ Tempo BASE Revertido (sem bônus): ${tempoBaseDHMS}</p>
+            <p>Quantidade de Formigas: ${formatar(Q)}</p>
+            <p style="color: blue;">Tempo Base de ${tier} transferido automaticamente para a Seção 1.</p>
         `;
 		
         // CORREÇÃO: Chama calcularTudo() para forçar o recálculo das Seções 1 e 2.
